# is-even-or-odd

./: Cargo.toml  README.md
src/: lib.rs
